Fixed broken validation and adapted all tests